; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msvcrt/extr_misc.c_init.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msvcrt/extr_misc.c_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"msvcrt.dll\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"rand_s\00", align 1
@prand_s = common dso_local global i8* null, align 8
@.str.2 = private unnamed_addr constant [12 x i8] c"$I10_OUTPUT\00", align 1
@pI10_OUTPUT = common dso_local global i8* null, align 8
@.str.3 = private unnamed_addr constant [11 x i8] c"strerror_s\00", align 1
@pstrerror_s = common dso_local global i8* null, align 8
@.str.4 = private unnamed_addr constant [14 x i8] c"_get_doserrno\00", align 1
@p_get_doserrno = common dso_local global i8* null, align 8
@.str.5 = private unnamed_addr constant [11 x i8] c"_get_errno\00", align 1
@p_get_errno = common dso_local global i8* null, align 8
@.str.6 = private unnamed_addr constant [14 x i8] c"_set_doserrno\00", align 1
@p_set_doserrno = common dso_local global i8* null, align 8
@.str.7 = private unnamed_addr constant [11 x i8] c"_set_errno\00", align 1
@p_set_errno = common dso_local global i8* null, align 8
@.str.8 = private unnamed_addr constant [19 x i8] c"_invalid_parameter\00", align 1
@p__invalid_parameter = common dso_local global i8* null, align 8
@.str.9 = private unnamed_addr constant [8 x i8] c"qsort_s\00", align 1
@p_qsort_s = common dso_local global i8* null, align 8
@.str.10 = private unnamed_addr constant [5 x i8] c"atan\00", align 1
@p_atan = common dso_local global i8* null, align 8
@.str.11 = private unnamed_addr constant [4 x i8] c"exp\00", align 1
@p_exp = common dso_local global i8* null, align 8
@.str.12 = private unnamed_addr constant [5 x i8] c"tanh\00", align 1
@p_tanh = common dso_local global i8* null, align 8
@.str.13 = private unnamed_addr constant [9 x i8] c"_lfind_s\00", align 1
@p_lfind_s = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @GetModuleHandleA(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* %1, align 4
  %4 = call i64 @GetProcAddress(i32 %3, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %5 = inttoptr i64 %4 to i8*
  store i8* %5, i8** @prand_s, align 8
  %6 = load i32, i32* %1, align 4
  %7 = call i64 @GetProcAddress(i32 %6, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %8 = inttoptr i64 %7 to i8*
  store i8* %8, i8** @pI10_OUTPUT, align 8
  %9 = load i32, i32* %1, align 4
  %10 = call i64 @GetProcAddress(i32 %9, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0))
  %11 = inttoptr i64 %10 to i8*
  store i8* %11, i8** @pstrerror_s, align 8
  %12 = load i32, i32* %1, align 4
  %13 = call i64 @GetProcAddress(i32 %12, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.4, i64 0, i64 0))
  %14 = inttoptr i64 %13 to i8*
  store i8* %14, i8** @p_get_doserrno, align 8
  %15 = load i32, i32* %1, align 4
  %16 = call i64 @GetProcAddress(i32 %15, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.5, i64 0, i64 0))
  %17 = inttoptr i64 %16 to i8*
  store i8* %17, i8** @p_get_errno, align 8
  %18 = load i32, i32* %1, align 4
  %19 = call i64 @GetProcAddress(i32 %18, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.6, i64 0, i64 0))
  %20 = inttoptr i64 %19 to i8*
  store i8* %20, i8** @p_set_doserrno, align 8
  %21 = load i32, i32* %1, align 4
  %22 = call i64 @GetProcAddress(i32 %21, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.7, i64 0, i64 0))
  %23 = inttoptr i64 %22 to i8*
  store i8* %23, i8** @p_set_errno, align 8
  %24 = load i32, i32* %1, align 4
  %25 = call i64 @GetProcAddress(i32 %24, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.8, i64 0, i64 0))
  %26 = inttoptr i64 %25 to i8*
  store i8* %26, i8** @p__invalid_parameter, align 8
  %27 = load i32, i32* %1, align 4
  %28 = call i64 @GetProcAddress(i32 %27, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.9, i64 0, i64 0))
  %29 = inttoptr i64 %28 to i8*
  store i8* %29, i8** @p_qsort_s, align 8
  %30 = load i32, i32* %1, align 4
  %31 = call i64 @GetProcAddress(i32 %30, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.10, i64 0, i64 0))
  %32 = inttoptr i64 %31 to i8*
  store i8* %32, i8** @p_atan, align 8
  %33 = load i32, i32* %1, align 4
  %34 = call i64 @GetProcAddress(i32 %33, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.11, i64 0, i64 0))
  %35 = inttoptr i64 %34 to i8*
  store i8* %35, i8** @p_exp, align 8
  %36 = load i32, i32* %1, align 4
  %37 = call i64 @GetProcAddress(i32 %36, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.12, i64 0, i64 0))
  %38 = inttoptr i64 %37 to i8*
  store i8* %38, i8** @p_tanh, align 8
  %39 = load i32, i32* %1, align 4
  %40 = call i64 @GetProcAddress(i32 %39, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.13, i64 0, i64 0))
  %41 = inttoptr i64 %40 to i8*
  store i8* %41, i8** @p_lfind_s, align 8
  ret void
}

declare dso_local i32 @GetModuleHandleA(i8*) #1

declare dso_local i64 @GetProcAddress(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
